# Fast-Fractal-Compression

./: README.md  __init__.py  pyproject.toml  pytest_bench.ini  setup.py
.github/workflows/: ci.yml
benchmarks/: conftest.py  test_benchmark_fractal.py
benchmarks/suites/: advanced_bench.yml  example.yml  my_suite.yml  transforms_sweep.yml
configs/: performance.yml  speed.yml
fastfractal/: __init__.py  __main__.py  _cext.c  _cext_backend.py  cext_encode_leaf.c
fastfractal/core/: blocks.py  decode.py  encode.py  search.py  transforms.py  types.py
fastfractal/csrc/: _cextmodule.c  decode_apply.c  domains_yx.c  downsample2x.c  extract_range.c  extract_range_flat.c  ff_common.h  fit_so.c  ranges_yx.c  topk_dot.c  topk_from_subset.c
fastfractal/io/: codebook.py  config.py  imageio.py
fastfractal/utils/: __init__.py  entropy.py  image_process.py  logger.py  metrics.py  visualize.py
notebooks/: encode_visualize_decode.ipynb
notebooks/demo_out/: encoded.ffc
tests/: test_config.py  test_integration.py  test_integration_advanced.py  test_roundtrip.py  test_utils_functions.py
tests/test-configs/: config_test.yml
tests/test-data/: mandebrot-set-colour.avif
