[project]
name = "fastfractal"
version = "0.1.0"
description = "Fast fractal image compression packages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.4", "Pillow>=12.0", "PyYAML>=6.0"]

[dependency-groups]
bench = ["pytest-benchmark>=5.2"]

notebooks = [
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "matplotlib>=3.8",
    "nbformat>=5.10",
]

dev = [
    "ruff>=0.14",
    "mypy>=1.10",
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "types-PyYAML>=6.0.12.20240808",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["E501"]
exclude = [".venv", "notebooks", ".github"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[build-system]
requires = ["setuptools>=68", "wheel", "numpy>=2.4"]
build-backend = "setuptools.build_meta"
